--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="exercises">Exercises</string>
     <string name="search">Search</string>
     <string name="add_excercise">Add Excercise</string>
 </resources>
